k8deploy/error-trigger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-trigger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: error-trigger
  template:
    metadata:
      labels:
        app: error-trigger
    spec:
      containers:
        - name: error-trigger
          image: us-central1-docker.pkg.dev/canaryguard-bda/canaryguard/error-trigger:latest
          ports:
            - containerPort: 2000
---
apiVersion: v1
kind: Service
metadata:
  name: error-trigger
spec:
  selector:
    app: error-trigger
  ports:
    - port: 2000
      targetPort: 2000
